Fix intro margins to look better on mobile
and hide the My Room project from ProjectList.ts

--- a/src/components/intro/Intro.scss
+++ b/src/components/intro/Intro.scss
@@ -2,9 +2,10 @@
 
 #intro-container {
   text-align: center;
-  margin: 50px 0;
+  margin: 25px 0;
 
   @media (min-width: breakpoint.$tablet) {
+    margin: 50px 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -16,7 +17,7 @@
   height: 150px;
   object-fit: cover;
   border-radius: 20px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   
   @media (min-width: breakpoint.$tablet) {
     margin-bottom: 0;
@@ -46,7 +47,7 @@
 
 #intro-heading {
   font-weight: 400;
-  font-size: 32px;
+  font-size: 26px;
   margin-top: 0;
 
   @media (min-width: breakpoint.$tablet) {
@@ -89,5 +90,9 @@
 }
 
 .underline {
-  border-bottom: 3px solid black;
+  border-bottom: 2px solid black;
+
+  @media (min-width: breakpoint.$tablet) {
+    border-bottom-width: 3px;
+  }
 }
